package com.planner.api.Entity;

public enum LogType {
    TEXT,
    NUMBER,
    DURATION,
    TABLE,
    CHECKBOX
}
